--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
 
 /*reset*/
 
-body, section, div, h1, h2, h3, h4, h5, a, p, ul, article, header, main {
+body, section, div, h1, h2, h3, h4, h5, a, p, ul, article, header, main, span {
   margin: 0;
   padding: 0;
   border: 0;
