--- a/app/assets/stylesheets/locations.css.scss
+++ b/app/assets/stylesheets/locations.css.scss
@@ -5,6 +5,7 @@
 #content {
   position: relative;
   height: 100%;
+  overflow:scroll;
 }
 
 .main {
@@ -111,4 +112,75 @@ section.showmap{
   width: 100%;
   height: 200px;
   top: 0;
+}
+
+//show page
+
+.loc-show {
+
+}
+
+.location-show-header {
+  display:block;
+  height: 640px;
+  overflow: hidden;
+}
+
+.location-show-header > img {
+  top: -20%;
+  width: 100%;
+}
+
+
+.location-show-leading {
+  display: block;
+  border-bottom: 1px solid #ccc;
+  padding: 10px 0 0 300px;
+}
+
+.location-show-info {
+  padding: 20px 0;
+  border-bottom: 1px solid #ccc;
+}
+
+h4.detail-tag {
+  font-weight: bold;
+  height: 100%;
+  float: left;
+  vertical-align: middle;
+  padding-right: 60px;
+}
+
+section.details {
+  float:left
+}
+
+.location-request {
+  float: left;
+  width: 300px;
+  padding: 30px;
+}
+
+div.info {
+  float: left;
+  width: 600px;
+  margin: 0 20px 0 300px;
+  padding: 20px 0;
+}
+
+section.description{
+  padding: 0px 0px 20px 0px;
+  border-bottom: 1px solid #ccc;
+}
+
+img.leading-pic {
+  float: left;
+  width: 100px;
+  border-radius: 50%;
+  padding: 4px 0px;
+}
+
+div.leading-text {
+  float: left;
+  padding: 15px;
 }
