--- a/app/assets/templates/shared/landing.jst.ejs
+++ b/app/assets/templates/shared/landing.jst.ejs
@@ -3,9 +3,10 @@
   <section class="sublanding">
 
     <section class="subsublanding">
-      
-    <input type="text" class="query">
-    <input type="submit" class="submit" name="submit" value="submit">
+      <form>
+        <input type="text" class="query" placeholder="Where to?">
+        <input type="submit" class="submit" name="submit" value="submit">
+      </form>
 
     </section>
   </section>
