--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -7,10 +7,12 @@ section.landing {
 
 section.sublanding {
   position: absolute;
+  top: -50px;
   height: 100%;
   width: 100%;
   background-image: image-url("waterfall.gif");
   background-size: cover;
+  z-index: -1;
   // background: #5C5C5C;
   // opacity: 0.3;
 
@@ -20,13 +22,23 @@ section.subsublanding {
   position: absolute;
   width: 100%;
   background: black;
-  opacity: 0.6;
+  opacity: 0.8;
   top: calc(100% - 100px);
   height: 100px;
 }
 
 .sublanding input[type="text"] {
+  position: absolute;
+  align: center;
   margin: auto;
-  height: 55px;
+  left: calc(50% - 300px);
+  top: 28px;
+  height: 44px;
   width: 600px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.sublanding input[type="submit"] {
+  display: none;
 }
