--- a/app/assets/stylesheets/locations.css.scss
+++ b/app/assets/stylesheets/locations.css.scss
@@ -5,7 +5,6 @@
 #content {
   position: relative;
   height: 100%;
-  overflow:scroll;
 }
 
 .main {
@@ -117,7 +116,8 @@ section.showmap{
 //show page
 
 .loc-show {
-
+  overflow:scroll;
+  height: 100%;
 }
 
 .location-show-header {
