--- a/app/assets/templates/shared/header.jst.ejs
+++ b/app/assets/templates/shared/header.jst.ejs
@@ -12,7 +12,7 @@
             <a href="#" id="signout">Sign Out</a>
           </form>
         </li>
-        <li> <a href="#/locations/new"> Add Your Camp </a> </li>
+        <li> <a class="camp" href="#/locations/new"> Add Your Camp </a> </li>
       <%} else {%>
         <li> <a href="#/session/new">Sign In</a> </li>
         <li> <a href="#/users/new">Sign up</a> </li>
