--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -99,3 +99,11 @@ a.camp {
   background: #27ae60;
   border-radius: 8%;
 }
+
+section.modal {
+  display: none;
+}
+
+section.modal active {
+  display: block;
+}
