--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -104,6 +104,27 @@ section.modal {
   display: none;
 }
 
-section.modal active {
+section.modal.active {
   display: block;
+}
+
+section.modal2 {
+  display: none;
+}
+
+section.modal2.active {
+  display: block;
+}
+
+div.modal-content {
+  position: absolute;
+  z-index: 1000;
+  top: 300px;
+  left: 50%;
+  width: 400px;
+  padding: 50px;
+  margin-left: -250px;
+  transform: translateY(-50%);
+  background: white;
+  border-radius: 5px;
 }
