--- a/app/assets/templates/shared/header.jst.ejs
+++ b/app/assets/templates/shared/header.jst.ejs
@@ -13,8 +13,8 @@
         </li>
         <li> <a class="camp" href="#/locations/new"> Add Your Camp </a> </li>
       <%} else {%>
-        <li> <a href="#/session/new">Sign In</a> </li>
-        <li> <a href="#/users/new">Sign up</a> </li>
+        <li> <a class="signinmodal">Sign In</a> </li>
+        <li> <a class="signupmodal">Sign up</a> </li>
       <% } %>
 
       </ul>
@@ -22,23 +22,78 @@
     </nav>
 
     <section class="modal">
-      <form class="modal-signin">
-        <label>
-          Username
-          <input type="text" name="user[username]">
-        </label>
+      <div class="modal-content">
+        <span class="closemodal">&times;</span>
 
-        <br>
+        <form class="modal-signin">
+          <label>
+            Username
+            <input type="text" name="user[username]">
+          </label>
 
-        <label>
-          Password
-          <input type="password" name="user[password]">
-        </label>
+          <br>
 
-        <br>
+          <label>
+            Password
+            <input type="password" name="user[password]">
+          </label>
 
-        <button>Sign In</button>
-      </form>
+          <br>
+
+          <input type="submit" id="signin" value="submit">
+        </form>
+
+      </div>
+    </section>
+
+    <section class="modal2">
+      <div class="modal-content">
+        <span class="closemodal2">&times;</span>
+
+        <h2>Sign Up</h2>
+
+        <form class="modal-signup">
+
+          <label>
+            First Name
+            <input type="text" name="user[first_name]"
+            value="<%= user.escape("first_name") %>">
+          </label>
+
+          <br>
+
+          <label>
+            Last Name
+            <input type="text" name="user[last_name]"
+            value="<%= user.escape("last_name") %>">
+          </label>
+
+          <br>
+
+          <label>
+            Username
+            <input type="text" name="user[username]"
+            value="<%= user.escape("email") %>">
+          </label>
+
+          <br>
+
+          <label>
+            Password
+            <input type="password" name="user[password]"
+            value="<%= user.escape("password") %>">
+          </label>
+
+          <br>
+
+          <input type="submit" value="Create Account">
+
+        </form>
+
+        <button class='guest'> Guest Login </button>
+
+      </div>
+
     </section>
 
   </header>
