--- a/app/assets/templates/locations/show.jst.ejs
+++ b/app/assets/templates/locations/show.jst.ejs
@@ -39,7 +39,7 @@
     </p>
 
     <p>
-      Water?: <%= location.get("water") ? "Drinking water available" : "Water must be brought in" %>
+      <%= location.get("water") ? "Drinking water available" : "Water must be brought in" %>
     </p>
 
     <p>
