finishes CSS on location show page

--- a/app/assets/stylesheets/locations.css.scss
+++ b/app/assets/stylesheets/locations.css.scss
@@ -208,3 +208,8 @@ div.leading-text {
   float: left;
   padding: 15px;
 }
+
+ul.reviews{
+  padding-bottom: 15px;
+  border-bottom: 1px solid #ccc;
+}
