--- a/app/assets/templates/requests/index.jst.ejs
+++ b/app/assets/templates/requests/index.jst.ejs
@@ -1,4 +1,4 @@
-<h2> Requests for <%= location.escape("name") %> </h2>
+<h2 class="requests"> Requests for <%= location.escape("name") %> </h2>
 
 <table>
   <tr>
