--- a/app/assets/templates/shared/header.jst.ejs
+++ b/app/assets/templates/shared/header.jst.ejs
@@ -35,7 +35,7 @@
 
           <label>
             Password
-            <input type="password" name="user[password]" value="<%= user.escape("password") %>">
+            <input class="password" type="password" name="user[password]" value="<%= user.escape("password") %>">
           </label>
 
           <br>
