--- a/app/assets/templates/shared/sign_in2.jst.ejs
+++ b/app/assets/templates/shared/sign_in2.jst.ejs
@@ -12,7 +12,7 @@
 
       <label>
         Password
-        <input type="password" name="user[password]">
+        <input class="password" type="password" name="user[password]">
       </label>
 
       <br>
