--- a/app/assets/stylesheets/requests.css.scss
+++ b/app/assets/stylesheets/requests.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the requests controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+h2.requests {
+  padding-top: 40px;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+}
