fixes guest login

--- a/app/assets/templates/shared/sign_in2.jst.ejs
+++ b/app/assets/templates/shared/sign_in2.jst.ejs
@@ -20,5 +20,7 @@
       <input type="submit" id="signin" value="submit">
     </form>
 
+    <button class='guest'> Guest Login </button>
+
   </div>
 </section>
