--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -74,14 +74,14 @@ h3 {
 }
 
 .header-logo {
-  padding: 10px 50px;
+  padding: 10px 0 10px 50px;
   float: left;
   font-weight: 900;
   font-size: 24px;
 }
 
 .header-navlist {
-  padding: 0px 50px;
+  padding: 0px 50px 0 0;
   float: right;
 }
 
