--- a/app/assets/stylesheets/locations.css.scss
+++ b/app/assets/stylesheets/locations.css.scss
@@ -242,3 +242,9 @@ h2.location-form {
     width: 100%;
   }
 }
+
+@media (max-width: 700px) {
+  ul$locations-list > li {
+    width: 440px;
+  }
+}
