--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -8,7 +8,7 @@ section.landing {
 section.sublanding {
   position: absolute;
   top: -50px;
-  height: 100%;
+  height: 550px;
   width: 100%;
   background-image: image-url("waterfall.gif");
   background-size: cover;
@@ -23,7 +23,7 @@ section.subsublanding {
   width: 100%;
   background: black;
   opacity: 0.8;
-  top: 550px;
+  top: 400px;
   height: 100px;
 }
 
