adds fullscreen blackout for sign in and login, closes on outside click

--- a/app/assets/templates/shared/sign_in2.jst.ejs
+++ b/app/assets/templates/shared/sign_in2.jst.ejs
@@ -7,20 +7,17 @@
         Username
         <input type="text" name="user[username]">
       </label>
-
       <br>
-
       <label>
         Password
         <input class="password" type="password" name="user[password]">
       </label>
-
       <br>
-
       <input type="submit" id="signin" value="submit">
     </form>
-
     <button class='guest'> Guest Login </button>
-
   </div>
+
+  <div class="modal-screen closemodal"></div>
+
 </section>
