--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -116,6 +116,16 @@ section.modal2.active {
   display: block;
 }
 
+.modal-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  background: rgba(0,0,0,0.7);
+}
+
 div.modal-content {
   position: absolute;
   z-index: 1000;
