pre loading page mess

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -143,6 +143,20 @@ a.camp {
   color: white;
 }
 
+a.signinmodal, a.signupmodal {
+  cursor: pointer;
+}
+
 input.password{
   margin-left: 4px;
+}
+
+#loading {
+  position:fixed;
+  z-index:999;
+  top:0;
+  left:0;
+  width:100%;
+  height: 100%;
+  background:rgba(0,0,0,0.3);
 }
