--- a/app/assets/templates/locations/form.jst.ejs
+++ b/app/assets/templates/locations/form.jst.ejs
@@ -1,6 +1,9 @@
+<form id="location-form">
+
+
 <br>
 <br>
-<h2 class="location-form">Share you camp to the world</h2>
+<h2 class="location-form">Share your camp</h2>
 
 <table>
   <tr>
@@ -58,6 +61,9 @@
     <td><input type="submit" value="Submit" class="formsubmit"></td>
   </tr>
 
-  <img src="<%= location.escape("photo_url") %>" id="preview-location-photo" width="400" />
 
 </table>
+  <img src="<%= location.escape("photo_url") %>" id="preview-location-photo" width="400" />
+
+
+</form>
