--- a/app/assets/templates/shared/header.jst.ejs
+++ b/app/assets/templates/shared/header.jst.ejs
@@ -50,7 +50,7 @@
 
     <section class="modal2">
       <div class="modal-content">
-        <span class="closemodal2">&times;</span>
+        <!-- <span class="closemodal2">&times;</span> -->
 
         <h2>Sign Up</h2>
 
@@ -78,24 +78,17 @@
           </label>
 
           <br>
-
           <label>
             Password
             <input type="password" name="user[password]">
           </label>
-
           <br>
-
           <input type="submit" value="Create Account">
-
         </form>
-
-
       </div>
-
       <div class="modal-screen closemodal2"></div>
-
-
     </section>
+
+    <!-- <div id="loading"></div> -->
 
   </header>
