--- a/app/assets/templates/shared/sign_in2.jst.ejs
+++ b/app/assets/templates/shared/sign_in2.jst.ejs
@@ -1,6 +1,6 @@
 <section class="modal active">
   <div class="modal-content">
-    <span class="closemodal">&times;</span>
+    <!-- <span class="closemodal">&times;</span> -->
 
     <form class="modal-signin">
       <label>
