--- a/app/assets/templates/shared/landing.jst.ejs
+++ b/app/assets/templates/shared/landing.jst.ejs
@@ -10,6 +10,6 @@
 
 <section class="subsublanding">
   <form>
-    <input type="text" class="query" placeholder="Where to?">
+    <input type="text" class="query" placeholder="Where to? ex. New York, San Francisco">
     <input type="submit" class="submit" name="submit" value="submit">
   </form>
